# static_hello_test

./: CMakeLists.txt  library.cpp  library.h
